# MrBoboWeb

./: .gitignore  ATestIndexFile.txt  BTestIndexFile.txt  BasiChatCmake.cpp  BigIntTestData  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  ClientSideWinsockSample.h  DebugDatabaseData.txt  DebugHash  DebugHash.txt  DebugHash2.txt  DebugInputData.txt  HTMLTest.html  MBErrorHandling.cpp  MBErrorHandling.h  MBGLoginDatabase  MailToTest.eml  Makefile  MrBoboSockets.h  NumbersThatGiveError.txt  RemarTestIndex  RemarTestIndex2  ServersideWinsockSample.h  TODO.txt  TestDatabas  TestIndexFile.txt  TestMBDBO_NestedCall.txt  TestMBDBO_ObjectScript.mbdbo  cmake_install.cmake  picosha2.h  plusaes.hpp
BasicChat/: BasicChatMain.cpp  ClientSide.h  ServerSide.h
Crawler/: Crawler.h  ExampleHeader.txt  FungerandeCrawlnna.txt  MBCrawler.cpp  MBCrawler.h  MBCrawlerSite.h  StringGrejer.h
MBCertificateHandler/: MBCertificateHandler.h
MBCrypto/: Asn1Handlers.h  CMakeLists.txt  MBCrypto.cpp  MBCrypto.h  MBPM_PacketInfo  MBSourceInfo.json  compile_commands.json
MBDNSHandler/: CMakeLists.txt  MBDNSHandler.cpp  MBDNSHandler.h  MBPM_PacketInfo  MBSourceInfo.json
MBMime/: CMakeLists.txt  MBMime.cpp  MBMime.h  MBPM_PacketInfo  MBSourceInfo.json
MBParsing/: BNFSpecification.txt  BNFTests.txt  CMakeLists.txt  Csv.cpp  Csv.h  JSON.cpp  JSON.h  MBCC.cpp  MBCC.h  MBPM_PacketInfo  MBParsing.cpp  MBParsing.h  MBParsingTest.cpp  MBParsing_MBBNFTest.cpp  MBSourceInfo.json  compile_commands.json
MBParsing/.cache/clangd/index/: MBParsing.cpp.56237BDECAFA1CCA.idx  MBParsing.h.11618194AA731D15.idx  MBParsingTest.cpp.7775AC3D7B63C500.idx
MBParsing/ProjectDiary/: 2022-04-23.md
MBSearchEngine/: BooleanParse.h  CMakeLists.txt  GraphemeBreakPropertyMacro.txt  MBISave.h  MBISaveIndexSpec.h  MBPM_PacketInfo  MBRecursiveDirectoryIterator.h  MBSearchEngine.cpp  MBSearchEngine.h  MBSearchEngineCLIClass.cpp  MBSearchEngineCLIClass.h  MBSearchEngineCLIMain.cpp  MBSourceInfo.json  MBUnicode.cpp  MBUnicode.h  MBUnicodeMacros.h
MBSystem/: BiDirectionalSubProcess.h  BiDirectionalSubProcess_Windows.cpp  CMakeLists.txt  MBPM_PacketInfo  MBSourceInfo.json  MBSystem.cpp  MBSystem.h  compile_commands.json
MBTorrent/: MBBitTorrent.cpp  MBBitTorrent.h
MBUnicode/: CMakeLists.txt  CodepointProperties.h  MBPM_PacketInfo  MBSourceInfo.json  MBUnicode.cpp  MBUnicode.h  MBUnicodeDefinitions.h  compile_commands.json
MBWebsite/: CMakeLists.txt  MBPM_FileInfoIgnore  MBPM_PacketInfo  MBSourceInfo.json  MBWebsiteMain.cpp  MPGMemeSite.cpp  MPGMemeSite.h  compile_commands.json
MBWebsite/Docs/: MBDocBuild.json
MBWebsite/Plugins/MBEmbed/: DirectFileStreamTemplate.html
MBWebsite/Plugins/MBSQL/: TopDatabase
MBWebsite/ProjectDiary/: 2022-03-04.md  2022-03-08.md  2022-03-09.md
MBWebsite/ServerResources/mrboboget.se/HTMLResources/: DBAdd.html  DBAdd.js  DBEditTemplate.html  DBLibrary.js  DBLogin.js  DBSite_Script.js  DBUpdate.html  DBUpdate.js  DBUploadFile.html  DBUploadFile.js  DBView.js  DBViewFolder.html  DBViewFolder.js  DBViewMedia.js  DBViewTemplate.html  DEBUG_MediaTracks.js  SearchIndex.html  TopMenu.html  UploadFileTest.html  VideoTest.html  VideoTestPlain.html  WebsidanStil.css  index.html  operationblipp.css  operationblipp.js
MrBigInt/: CMakeLists.txt  MBPM_PacketInfo  MBSourceInfo.json  MrBigInt.cpp  MrBigInt.h
MrBoboChatt/: MBCProtocols.cpp  MBCProtocols.h  MBChatConnection.cpp  MBChatConnection.h  MrBoboChatt.cpp  MrBoboChatt.h
MrBoboDatabase/: CMakeLists.txt  MBDBObjectScript.cpp  MBDBObjectScript.h  MBPM_PacketInfo  MBSourceInfo.json  MPGMemeSite.cpp  MPGMemeSite.h  MrBoboDatabase.cpp  MrBoboDatabase.h
MrBoboMail/: MrBoboMail.cpp  MrBoboMail.h
MrBoboMedia/: MBMedia.cpp  MBMedia.h
MrBoboSockets/: CMakeLists.txt  MBPM_PacketInfo  MBSourceInfo.json  MrBoboSockets.cpp  MrBoboSockets.h  TLSHandler.cpp  TLSHandler.h  TODO.md  compile_commands.json
MrBoboSockets/ProjectDiary/: 2022-02-22.md
MrPostOGet/: Asn1Handlers.h  CMakeLists.txt  MBHTMLParser.h  MBPM_PacketInfo  MBSourceInfo.json  MrPostOGet.cpp  MrPostOGet.h  SearchEngineImplementation.h  TLSHandler.cpp  TLSHandler.h  TinySha1.h
MrPostOGet/ProjectDiary/: 2022-04-23.md
SearchEngine/: MBSearchEngine.h
ServerResources/mrboboget.se/HTMLResources/: AudioTest.html  DBAdd.html  DBAdd.js  DBCreatePlaylist.js  DBLibrary.js  DBLogin.html  DBSite.html  DBSite_Script.js  DBUpdate.js  DBUploadFile.html  DBUploadFile.js  DBViewFolder.js  DBViewTemplate.html  DirectFileStreamTemplate.html  EmbeddStreamTemplate.html  OMyGodNej.MOV  RedirectToSearch.js  SearchIndex.js  StreamingTest.html  TopMenu.html  VideoTest.html  WebsidanStil.css  WofUJ2a99opDojilmXITkWweFt80TEXr-UyL0r7LlP0  YoutoubeTest.html  index.htm  operationblipp.html  toTopOfsite.js
ServerResources/mrboboget.se/HTMLResources/OMyGodNej/: 720p.m3u8  720p_000.ts  720p_001.ts  720p_002.ts  720p_003.ts  720p_004.ts  720p_005.ts
WebsiteResources/: index.htm
